src/components/terrain-summary.scss
.terrainSummary{
  justify-content: space-around;
  flex-grow: 1;
  text-align: center;
  font-size: 10px;
  margin-left: auto;
  margin-right: auto;
  .row{
    height: 50px;
    vertical-align: middle;
    overflow: auto;
    .column{
      display: inline-block;
      position: relative;
      .icon{
        position: absolute;
        right: 0px;
        width: 26px;
        height: 26px;
      }
      .caption{
        position: absolute;
        left: 0px;
        width: 50px;
      }
    }
  }
}

